[package]
name = "modcache"
version = "0.1.0"
authors = ["C J Silverio <ceejceej@gmail.com>"]
edition = "2021"
description = "Tools for making a local searchable database of the Nexus mod list for a moddable game."
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities", "games", "nexusmods"]

[dependencies]
anyhow = "1.0.42"
async-std = "1.9.0"
chrono = "0.4.19"
clap = { version = "4.2.5", features = ["derive"] }
dotenvy = "0.15.6"
itertools = "0.10.1"
kv = { version = "0.24.0", features = ["json-value"]}
log = "0.4.14"
loggerv = "0.7.2"
num-format = "0.4.0"
owo-colors = "3.2.0"
prettytable-rs = "0.10.0"
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
term_grid = "0.2.0"
terminal_size = "0.2.1"
textwrap = "0.16.0"
unicase = "2.6.0"
ureq = { version="2.1.1", features= ["json"] }
