[package]
name = "modcache"
version = "0.1.0"
authors = ["C J Silverio <ceejceej@gmail.com>"]
edition = "2021"
description = "Tools for making a local searchable database of the Nexus mod list for a moddable game."
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities", "games", "nexusmods"]

[dependencies]
anyhow = "1.0.77"
async-std = "1.12.0"
chrono = "0.4.24"
chrono-humanize = "0.2.3"
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.4.5"
crossterm = "0.26.1"
dotenvy = "0.15.7"
humansize = "2.1.3"
itertools = "0.12.0"
kv = { version = "0.24.0", features = ["json-value"]}
log = "0.4.17"
loggerv = "0.7.2"
num-format = "0.4.4"
once_cell = "1.19.0"
owo-colors = "4.0.0"
prettytable-rs = "0.10.0"
regex = "1.8.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.96"
term_grid = "0.2.0"
terminal_size = "0.3.0"
textwrap = "0.16.0"
tokio = { version = "1.25.1", features = ["full"] }
tui = "0.19.0"
unicase = "2.6.0"
ureq = { version="2.9.1", features= ["json"] }
